--- a/src/main/resources/com/mycompany/it250/dz/pages/DodajKorisnika.tml
+++ b/src/main/resources/com/mycompany/it250/dz/pages/DodajKorisnika.tml
@@ -1,6 +1,12 @@
-<html t:type="layout" title="Korisnik"
+<html t:type="layout" title="Dodaj Korisnika"
+ t:sidebarTitle="Framework Version"
  xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd"
  xmlns:p="tapestry:parameter">
- <t:beaneditform object="korisnik"/>
- <t:grid t:source="korisnici"/>
+ <t:beaneditform object="korisnik" exclude="korisnikId" >
+ </t:beaneditform>
+ <t:grid source="korisnici" exclude="id" add="delete" row="onekorisnik">
+ <p:deleteCell>
+ <t:actionlink t:id="delete" context="onekorisnik.korinsikId">Delete</t:actionlink>
+ </p:deleteCell>
+ </t:grid>
 </html>
