--- a/src/main/resources/com/mycompany/it250/dz/pages/Generic.tml
+++ b/src/main/resources/com/mycompany/it250/dz/pages/Generic.tml
@@ -8,7 +8,8 @@ xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd" xmlns:p="tapestry:p
  <t:actionlink t:id="edit" context="row">Izmeni</t:actionlink>
  </p:editCell>
  <p:brisanjeCell>
- <t:actionlink t:id="brisanje" context="row">Izbrisi</t:actionlink>
+ <t:actionlink t:id="brisanje" context="row" t:mixins="Confirm">Izbrisi</t:actionlink>
  </p:brisanjeCell>
  </t:grid>
+
  </html>
